--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,8 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json  # Optional - some teams commit this
-yarn.lock          # Optional - some teams commit this
+package-lock.json 
 
 # Environment variables
 .env
